# GRIP-calculator

./: .gitignore  README.md
GRIPCalculator/: GRIPCalculator.pro  main.cpp  view.cpp  view.cpp.autosave  view.h  view.ui
GRIPServer/: handler.cpp  handler.h  json_parser.cpp  json_parser.h  main.cpp
build-GRIPCalculator-Desktop_Qt_5_11_2_clang_64bit-Debug/: Makefile  moc_view.cpp  ui_view.h
build-GRIPCalculator-Desktop_Qt_5_11_2_clang_64bit-Debug/GRIPCalculator.app/Contents/: Info.plist
build-dofcalc-Desktop_Qt_5_11_2_MinGW_32bit-Release/release/: dofcalc.settings  moc_mainwindow.cpp
dofcalc/: GRIPCalculator.pro.user.2fe6a97  Makefile  Makefile.Debug  Makefile.Release  apiprovider.cpp  apiprovider.h  client.cpp  client.cpp.autosave  client.h  dofcalc.pro  dofcalc.pro.user.1cfab63  dofcalc.pro.user.2fe6a97  dofcalc.pro.user.f68e2cf  dofmanager.cpp  dofmanager.h  image.h  imagehandler.cpp  imagehandler.h  json_parser.cpp  json_parser.hpp  logger.cpp  logger.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathlibrary.cpp  mathlibrary.h  moc_loginwindow.cpp  moc_mainwindow.cpp  moc_predefs.h  properties.cpp  properties.h  propertylist.cpp  propertylist.h  strategies.cpp  strategies.h  (+7 more)
dofcalc/Tests/TestsDOF/: TestsDOF.pro  main.cpp
dofcalc/Tests/TestsGRIP/: TestsGRIP.pro  imagehandler.cpp  main.cpp  propertylist.cpp  tests_gtest.cpp  tests_gtest.h
dofserv/: CMakeLists.txt  Makefile  db_work.cpp  db_work.hpp  handler.cpp  handler.hpp  json_parser.cpp  json_parser.hpp  main.cpp
(+5 files in other folders)
